--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.6.8",
+    "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
